--- a/Translations/German/text-cityName-change.xml
+++ b/Translations/German/text-cityName-change.xml
@@ -7,6 +7,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_CITYNAME_ABYDOS</zType>
+			<!--Abydos-->
 		<Translation>Abdju</Translation>
 	</Entry>
 	<Entry>
