--- a/Translations/German/text-mapElementNames-change.xml
+++ b/Translations/German/text-mapElementNames-change.xml
@@ -2676,5 +2676,111 @@
 	<Entry>
 		<zType>TEXT_CITYNAME_GORGIPPIA</zType>
 		<Translation>Gorgippia</Translation>
-	</Entry>	 
+	</Entry>
+	<Entry>
+		<zType>TEXT_CITYNAME_THAMUGADI</zType>
+		<Translation>Thamugadi</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_CITYNAME_CIRTA</zType>
+		<Translation>Cirta</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_CITYNAME_QART_HADASHT</zType>
+		<Translation>Qart-Hadasht</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_CITYNAME_AGADIR</zType>
+		<Translation>Agadir</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_CITYNAME_MARRAKESH</zType>
+		<Translation>Marrakesh</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_CITYNAME_IMLIL</zType>
+		<Translation>Imlil</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_CITYNAME_SAFI</zType>
+		<Translation>Safi</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_CITYNAME_FES</zType>
+		<Translation>Fes</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_CITYNAME_BAECULA</zType>
+		<Translation>Baecula</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_CITYNAME_TARAS</zType>
+		<Translation>Taras</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_CITYNAME_SALDUBA</zType>
+		<Translation>Salduba</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_FLUMEN_ANAS</zType>
+		<Translation>Flumen Anas</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_CIMERIAN_FOREST</zType>
+		<Translation>Cimerian Forest</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_CITYNAME_ELUSA</zType>
+		<Translation>Elusa</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_CITYNAME_SEGODUNUM</zType>
+		<Translation>Segodunum</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_CITYNAME_ALBA_POMPEIA</zType>
+		<Translation>Alba Pompeia</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_CITYNAME_NEMAUTUS</zType>
+		<!--Nismes-->
+		<Translation>Nemautus</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_CITYNAME_SINGIDUNUM</zType>
+		<Translation>Singidunum</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_DORDOGNE_RIVER</zType>
+		<Translation>Dordogne River</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_CITYNAME_VERONA</zType>
+		<Translation>Verona</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_CITYNAME_VIRUNUM</zType>
+		<Translation>Virunum</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_CITYNAME_AVARICUM</zType>
+		<Translation>Avaricum</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_CITYNAME_TURONES</zType>
+		<Translation>Turones</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_CITYNAME_NOREIA</zType>
+		<Translation>Noreia</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_CITYNAME_CARNUNTUM</zType>
+		<Translation>Carnuntum</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_CITYNAME_ARGENTORATUM</zType>
+		<!--Strasbourg-->
+		<Translation>Argentoratum</Translation>
+	</Entry>
 </Root>
