--- a/Translations/German/text-project-change.xml
+++ b/Translations/German/text-project-change.xml
@@ -2,7 +2,7 @@
 
 <Root>
 	<!--Assets/GameAssets/Resources/Infos/improvement.xml-->
-	<!--NOTE: improvement names that are mass nouns or plural do not need multiple types in Translation-->
+	<!--NOTE: improvement names that are mass nouns or plural do not need multiple types in English-->
 	<Entry>
 		<zType/>
 		<Translation/>
